<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
   android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="10dp"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        app:counterEnabled="true"
        app:counterMaxLength="16"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="#D50000"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="16">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:helperText="@string/required"
            app:helperTextTextColor="#D50000"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="10dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btRegister"
        android:layout_width="202dp"
        android:layout_height="67dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/shape"
        android:fontFamily="serif-monospace"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />



</LinearLayout>