<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_userName_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_name"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="10dp"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_userName_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_Pass_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_user_Password"
        app:boxStrokeColor="@color/purple_700"
        android:layout_marginTop="10dp"
        app:passwordToggleEnabled="true"
        app:helperText="@string/required"
        app:helperTextTextColor="#D50000"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_password_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_login"
        android:layout_width="206dp"
        android:layout_height="64dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:text="Login"
        android:textAllCaps="false"
        android:fontFamily="serif-monospace"
        android:textSize="20sp"
        android:textStyle="bold"></Button>


</LinearLayout>